<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".create_routine">

    <TextView
        android:id="@+id/what"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:text="@string/what_label"
        android:textAlignment="center"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/then"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/then"
        android:layout_width="220dp"
        android:layout_height="61dp"
        android:text="@string/then_label"
        android:textAlignment="center"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/this2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/if1"
        android:layout_width="220dp"
        android:layout_height="61dp"
        android:text="@string/if_label"
        android:textAlignment="center"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.27" />

    <TextView
        android:id="@+id/this2"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:text="@string/this_label"
        android:textAlignment="center"
        android:textSize="44sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/if1"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/plusbttn"
        android:layout_width="68dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:foregroundTint="#00166B91"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/this2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.361"
        app:srcCompat="@drawable/ic_add_2" />

    <Button
        android:id="@+id/checkData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:text="Create"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what" />
</androidx.constraintlayout.widget.ConstraintLayout>