<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".date.DateTime">

    <Button
        android:id="@+id/button2"
        android:layout_width="309dp"
        android:layout_height="86dp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:outlineProvider="bounds"
        android:text="@string/every_day_at"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <Button
        android:id="@+id/button3"
        android:layout_width="309dp"
        android:layout_height="86dp"
        android:background="@color/colorPrimary"
        android:ellipsize="none"
        android:fontFamily="@font/roboto"
        android:outlineProvider="bounds"
        android:text="@string/every_week_at"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/button4"
        android:layout_width="309dp"
        android:layout_height="86dp"
        android:background="@color/colorPrimary"
        android:ellipsize="none"
        android:fontFamily="@font/roboto"
        android:outlineProvider="bounds"
        android:text="@string/one_time_at"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="normal"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="0.064" />

</androidx.constraintlayout.widget.ConstraintLayout>